# cs-140e-os

bootloader/: Makefile  Xargo.toml
bootloader/ext/: layout.ld
bootloader/src/: kmain.rs  lang_items.rs
fat32/: Cargo.toml
fat32/src/: mbr.rs  tests.rs
fat32/src/traits/: dummy.rs  metadata.rs  mod.rs
fat32/src/vfat/: cache.rs  cluster.rs  dir.rs  ebpb.rs  entry.rs  fat.rs  file.rs  metadata.rs  vfat.rs
kernel/: Cargo.toml  Makefile  Xargo.toml
kernel/ext/: init.S
kernel/src/: console.rs  kmain.rs  lang_items.rs  shell.rs
kernel/src/allocator/: bin.rs  bump.rs  linked_list.rs  mod.rs  tests.rs  util.rs
kernel/src/fs/: mod.rs  sd.rs
kernel/src/process/: process.rs  scheduler.rs  stack.rs  state.rs
kernel/src/traps/: irq.rs  mod.rs  syndrome.rs  syscall.rs  trap_frame.rs
pi/: Cargo.toml
pi/src/: gpio.rs  interrupt.rs  lib.rs  timer.rs  uart.rs
pi/src/atags/: atag.rs  mod.rs  raw.rs
std/: Cargo.toml  Xargo.toml
std/src/: alloc.rs  error.rs  lib.rs  macros.rs  memchr.rs  path.rs
std/src/collections/hash/: map.rs
std/src/io/: mod.rs
std/src/os/: mod.rs
std/src/prelude/: v1.rs
std/src/sync/: mod.rs
std/src/sys/: mod.rs
std/src/sys/ros/: alloc.rs  mod.rs  os.rs  os_str.rs  path.rs  stdio.rs
std/src/sys_common/: io.rs  mod.rs  util.rs
