[package]
name = "kernel"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["staticlib"]
path = "src/kmain.rs"

[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.test]
debug = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
pi = { path = "../pi" }

# from assignment 1
stack-vec = { path = "../../1-shell/stack-vec/" }

# from assignment 2
fat32 = { path = "../../2-fs/fat32/" }

[target.'cfg(target_os = "ros")'.dependencies]
std = { path = "../std" }
